2003-04-15  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03880] Re: convert \ -> / in URL
	* Bonus/backslash_to_slash.cgi: added

2003-04-15  Masanori Kobayasi <zap03216@nifty.ne.jp>

	* [w3m-dev 03878] I-search problem
	* linein.c (inputLineHistSearch): don't call incrfunc twice
	* main.c (dispincsrch): fix search loop problem

2003-04-14  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03875] Re: SSL & compressed stream
	* file.c (loadGeneralFile): check t_buf != NULL
	* url.c (openURL): don't initialize URLFile here
		(init_stream): 0 clear URLFile

2003-04-14  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03873] SSL & compressed stream
	* file.c (loadGeneralFile): always update ssl_certificate 
	* url.c (openURL): initialize URLFile

2003-04-12  NAKAJIMA Mikio <minakaji@osaka.email.ne.jp>

	* [w3m-dev 03872] goodict.cgi
	* Bonus/goodict.cgi: adapt new goo dict web page

2003-04-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* configure.in (AUXBIN_TARGETS): don't reset, move to head

2003-04-10  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03870] Re: configure --help
	* acinclude.m4 (AC_W3M_IMAGE): fix help message
			(AC_W3M_SSL): fix typo

2003-04-09  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03865] Re: configure --help
	* acinclude.m4 (AC_W3M_ANSI_COLOR): depends USE_COLOR
		(AC_W3M_BG_COLOR): depends USE_COLOR
		(AC_W3M_W3MMAILER): depends external_uri_loader
	* fm.h: undef USE_BG_COLOR ifndef USE_COLOR

2003-04-09  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03864] doc/README
	* doc/README doc-jp/README: update

2003-04-09  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m] local cookie string is too easy to guess.
	* fm.h (Local_cookie): deleted
	* local.c (Local_cookie): static
		(writeLocalCookie): localCookie()
		(setLocalCookie): deleted
		(localCookie): added
	* main.c (main): delete srand48(), setLocalCookie()
		(adBmark): s/Local_cookie/localCookie()/
	* proto.h (setLocalCookie): deleted
		(localCookie): added